Changing mobile menu size and fixing list align on the main page

--- a/src/css/container.css
+++ b/src/css/container.css
@@ -22,6 +22,7 @@
     .article_top ul {
         line-height: 1.5rem;
         font-size: 1.15rem;
+        list-style-position: inside;
     }
 
     .article_top a {
